data/derived/comb/progs/unify/prog5430.ml.out
Characters 55-65:
  | h::t -> catLists t::j ((lastListElement x) :: y);;
            ^^^^^^^^^^
Error: This expression has type 'a -> 'b list
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a -> 'b list
